lab1/Test/L1-A-7-7.cmm
float ;
int zSE4d , QvBudfUgZJa 

;:
int vK48zBMCqjCjxa ( int biuZTbu9qs1L9 ) {
  if ( BrXnlJhn_DgOUzQbrVUO ) {
{
      struct {
        struct GMAHKLgsJ1ezERODez {
        }Dt ;
        int IdlXuYMOqfB4Ty7Wz0 ;
      }lZO94wvwPTgCdS3 ;
    }`    if ( dCo )     if ( Q5rjbs5RZnDN0bD )     while 
      ( r04YFBztKf19 )     _HF7HgGbDksQmfCbiq_1 ;

else     while ( xBLEDxJ )     if ( V0omsckMLJCeGPS6 
      ) {
      int HBP ;
      struct NZr14EmiBJOVv68 vsqAifTGM64g50K , RInyFb6GjjUucH73gowq 
        [ 1899299295 ] = mZO3MtDkVfszzX ;
{
      }    }else     while ( Q2 )     W468MwotZhM 
      ;




else     if ( L )     p4PJgyq_OgXVBiBIFjSf ;
else     if ( T7Ok1u )     return Abkk14IQpehY6wZ2_ 
      = oYxHEJ1qb8EU && FyeeWfuglDs >= ( ZBXRLn2m8TCSyIwPgGpj 
      || SObW_CVg > UoIeZ + reBloyetb / - ! Vyv3SGJHgtHx 
      ( ESc , g6Zj8 - JLT_tRoJCNP8LM0B4OJv * Nani [ Q5EiJrqLYd6V_u 
      == UQ_cJEx4 + fjoHhoFAKMjiE7_ / j ( Gxnn = reYwz9zVPQTD4llgp 
      != mqy8 + Cw5Tv90qvIZ1TNj4DpMc / ( alYPQ < tGU7AXufQX_ot4LF 
      ) ) <= - F7iZObD69VFqoEK * - ! 1783671738.1057675196 
      . yAEUBYw8n * 1580555751 * sZR42CPhg0KJ ( ) ] ) ) 
      . UJ8tQW ;



  }
}
int ;
int ;
int ;
int QTTK ( ) {
}
int O8Zh ( ) {
}
int jhW2A_GJWlRNe_h10 ( ) {
}
int gQcmkkCPakmClLbsU0 ( ) {
}
int x6 ( ) {
}
int AmOGYP_cZLnF45VL ( int U , int HR8R ) {
}
int ;
